# rose_navigation

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml  rsync.sh
codex/: slam_interview_notes.md
config/: mid360_lm.yaml  rose_map.yaml  rose_planner.yaml
launch/: mid360_lm.launch.py  rose_map.launch.py  rose_planner.launch.py
src/: param_deliver.h.in
src/lm/: common.hpp  eskf.h  estimator.cpp  estimator.h  small_ivox.h  small_oct_vox.hpp  small_point_lio.cpp  small_point_lio.hpp  small_point_lio_node.cpp  so3_math.h
src/lm/lidar_adapter/: base_lidar.h  custom_mid360_driver.h  livox_custom_msg.h  livox_pointcloud2.h  unitree_lidar.h  velodyne_pointcloud2.h
src/map/: bin_map.hpp  esdf.cpp  esdf.hpp  occ_map.cpp  occ_map.hpp  rose_map.cpp  rose_map.hpp  rose_map_node.cpp  voxel_map.hpp
src/planner/: common.hpp  rose_planner.cpp  rose_planner.hpp  rose_planner_node.cpp  traj.hpp
src/planner/control/: lmpc.cpp  lmpc.hpp
src/planner/path_search/: a*.cpp  a*.hpp
src/planner/traj_opt/: minco.hpp  trajectory.hpp  trajectory_opt.cpp  trajectory_opt.hpp
src/utils/: atomic_vec.hpp  lock_queue.hpp  pc_pub.hpp  rcl_tf.hpp  rclcpp_parameter_node.hpp  utils.hpp
src/utils/io/: pcd_io.cpp  pcd_io.h
src/utils/mapping/: pcd_mapping.cpp  pcd_mapping.h
